// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader AppHeader render tests renders correctly when the user is logged in 1`] = `
<div
  class="MuiBox-root css-69i1ev"
  data-testid="app-header-container-65b0785e-14d9-43a3-b260-869983312406"
>
  <a
    aria-current="page"
    class="active"
    data-testid="app-header-logo-link-65b0785e-14d9-43a3-b260-869983312406"
    href="#/"
    style="line-height: 0;"
  >
    <img
      alt="Tabiya"
      data-testid="app-header-logo-65b0785e-14d9-43a3-b260-869983312406"
      height="30px"
      src="/logo.svg"
    />
  </a>
  <div
    class="MuiBox-root css-1g0z69"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    >
      JohnDoe
    </p>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1s9eyn2-MuiButtonBase-root-MuiIconButton-root"
      data-testid="app-header-auth-button-65b0785e-14d9-43a3-b260-869983312406"
      tabindex="0"
      title="Account"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="app-header-icon-user-65b0785e-14d9-43a3-b260-869983312406"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    data-testid="mock-context-menu"
  />
</div>
`;

exports[`AppHeader AppHeader render tests renders correctly with unauthenticated state 1`] = `
<div
  class="MuiBox-root css-69i1ev"
  data-testid="app-header-container-65b0785e-14d9-43a3-b260-869983312406"
>
  <a
    aria-current="page"
    class="active"
    data-testid="app-header-logo-link-65b0785e-14d9-43a3-b260-869983312406"
    href="#/"
    style="line-height: 0;"
  >
    <img
      alt="Tabiya"
      data-testid="app-header-logo-65b0785e-14d9-43a3-b260-869983312406"
      height="30px"
      src="/logo.svg"
    />
  </a>
  <div
    class="MuiBox-root css-1g0z69"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
    />
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-1s9eyn2-MuiButtonBase-root-MuiIconButton-root"
      data-testid="app-header-auth-button-65b0785e-14d9-43a3-b260-869983312406"
      tabindex="0"
      title="Account"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
        data-testid="app-header-icon-user-65b0785e-14d9-43a3-b260-869983312406"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div
    data-testid="mock-context-menu"
  />
</div>
`;
